--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
       <div class="contact-div">
         <h2 class="title">Get in touch with us</h2>
-        <a href="">
+        <a href="mailto:rominimal10@gmail.com">
           <button class="contact-btn text">Send Email</button>
         </a>
       </div>
